--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ table, td{
     padding: 9px;
 }
 table{
-    width: 300px;
+    width: 510px;
     display: block;
     margin: 0 auto;
     border-radius: 8px; margin-top: 30px;
@@ -42,4 +42,7 @@ h1{
     background-color: #d8d8d8;
     color: #6e0040;
     border: none;
+}
+.end{
+    width: 300px;
 }
